[metadata]
name = envault
version = 0.1.0
description = Secure local environment variable manager with per-project isolation and audit logs
author = envault contributors
license = MIT

[options]
packages = envault
python_requires = >=3.9
install_requires =
    cryptography>=41.0

[options.entry_points]
console_scripts =
    envault = envault.cli:main

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov

[tool:pytest]
testpaths = tests
addopts = --tb=short

[coverage:run]
source = envault
branch = True

[coverage:report]
show_missing = True
omit =
    tests/*
